# Calculadora_Python

./: .gitignore  404.html  GEMINI.md  LICENSE  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: release.yml
clases/AppCalculator_doc/: index.html
clases/ButtonsCreator_doc/: index.html
clases/Calculator_doc/: index.html
clases/HistoryManager_doc/: index.html
clases/HistoryTableDB_doc/: index.html
clases/InterfaceCreator_doc/: index.html
clases/ScreensCreator_doc/: index.html
docs/: index.md
docs/Clases/: ButtonsCreator_doc.md  Calculator_doc.md  HistoryManager_doc.md  HistoryTableDB_doc.md
docs/clases/: AppCalculator_doc.md  ButtonsCreator_doc.md  Calculator_doc.md  HistoryManager_doc.md  HistoryTableDB_doc.md  InterfaceCreator_doc.md  ScreensCreator_doc.md
docs/tests/: test_ButtonsCreator_doc.md  test_Calculator_doc.md  test_HistoryManager_doc.md
license/: index.html
search/: search_index.json
src/Calculadora_Python.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/calculator_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/core/: calculator.py
src/database/: calculator_db.db  history_db.py  history_manager_db.py
src/ui/: ui_buttons_creator.py  ui_data.py  ui_interface_creator.py  ui_interface_manager.py  ui_screens_creators.py  ui_styles.py  ui_themes_colors.py
stylesheets/: extra.css
tests/: conftest.py  test_buttons_creator.py  test_calculator.py  test_history_manager.py
tests/test_ButtonsCreator_doc/: index.html
(+2 files in other folders)
