[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "calculator-app"
version = "0.1.0"
requires-python = ">=3.8.1"
dependencies = [
    "pydantic~=1.10",
    "PyQt5~=5.15"
]

# === NUEVA SECCIÓN: Dependencias opcionales ===
[project.optional-dependencies]
# Definimos un grupo 'dev' para herramientas de desarrollo
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "flake8>=7.0.0",
    "pylint>=3.0.0",
    "mkdocs-material>=9.0.0"
]

# === NUEVA SECCIÓN: Configuración de pytest ===
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
